Update to report for more accuracy

--- a/Reports/Project Deliverable A.tex
+++ b/Reports/Project Deliverable A.tex
@@ -11,6 +11,8 @@ I'm the only one working on this project.
 This project is called PeerCoin, an open-source P2P data sharing/cryptocurrency platform built on a blockchain. 
 \section*{Purpose}
 The main purpose is to be able to share small amounts of data from peer to peer without use of a server. On top of that, the blockchain should be capable of secure payments as well as capable of hosting some simple applications related to its previously stated purposes. Essentially, the person would pay a coin to get some data from a particular peer or a few coins along the way to get chunks from several peers, with the core of every request or application being a transaction of coins.
+\section*{Research Done}
+I have read the documentation for Bitcoin and Etherium, as well as looked at some open-source implementations of cryptocurrencies.
 \section*{Deliverables}
 My deliverables will be source code and progress reports submitted as required as well as available on GitHub in a folder named "Reports" 
 
@@ -19,8 +21,13 @@ My deliverables will be source code and progress reports submitted as required a
 The general progress timeline would be reports every other week with updates to the code happening on a rolling basis.
 
 The first milestone is to have a functioning CLI program that encrypts, decrypts, and hashes in the blockchain's format.
+
 The second would be a CLI program that can send a payment into another instance of the CLI program, that decrypts it. (e.g a second node in the blockchain)
+
 The third would be implementing the ability to share data along with payment between the computers in the network, utilizing this software. (distributed nodes)
-The final would be providing a GUI for the program and refining the interactions with the blockchain.
+
+The final would be providing a GUI for the program and refining the interactions with the blockchain. 
+
+Further refinements will be made if time permits.
 
 \end {document}
